Fix Java 21 build and test tooling