@@ -19,7 +19,7 @@ public class SustenanceJob implements Job {
 
    private static Log _log = LogFactory.getLog(SustenanceJob.class);
 
-   private static final int TIMER_WAKEUP = new Integer(
+   private static final int TIMER_WAKEUP = Integer.valueOf(
          PropertiesManager.getInstance().getProperty(
                PropertiesManager.SUSTENANCE_TIMER_WAKEUP)).intValue();
 
