@@ -42,7 +42,7 @@ public class HairColorPlayerState implements PlayerState {
       // Message already displayed.  Attempt to process input.
       String invalidMessage = MessageFormat.format(TaMessageManager.INVALID.getMessage(), HairColor.values().length - 1);
       try {         
-         Integer intValue = new Integer(input);
+         Integer intValue = Integer.valueOf(input);
          HairColor hairColor = HairColor.getHairColor(intValue);
          if (hairColor.equals(HairColor.INVALID)) {
             // Invalid input.  Stay in the same state.
